[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Store.gd" type="Script" id=2]
[ext_resource path="res://Assets/sons/comprar.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.724475, 0.78125, 0.494385, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.92549, 1, 0.623529, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.474049, 0.507813, 0.337219, 1 )

[sub_resource type="Theme" id=7]
Button/constants/hseparation = 2
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.8125, 0.705776, 0.326904, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.811765, 0.733333, 0.454902, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.644531, 0.542163, 0.178757, 1 )

[sub_resource type="Theme" id=11]
Button/colors/font_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[node name="Store" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect2" type="ColorRect" parent="Control"]
margin_left = -300.0
margin_top = -252.0
margin_right = 310.0
margin_bottom = 258.0
color = Color( 0.137255, 0.145098, 0.14902, 1 )

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -296.0
margin_top = -248.0
margin_right = 304.0
margin_bottom = 252.0
color = Color( 0.0823529, 0.470588, 0.611765, 1 )

[node name="Titol" type="Label" parent="Control"]
margin_left = -104.0
margin_top = -176.0
margin_right = 101.0
margin_bottom = -111.0
custom_colors/font_color = Color( 0.85098, 0.752941, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "STORE"

[node name="Velocitat_text" type="Label" parent="Control"]
margin_left = -192.0
margin_top = -40.0
margin_right = -57.0
margin_bottom = -7.0
custom_colors/font_color = Color( 0.85098, 0.752941, 0.415686, 1 )
custom_fonts/font = SubResource( 2 )
text = "Velocity:"

[node name="Preu_velocitat" type="Label" parent="Control"]
margin_left = 187.0
margin_top = -30.0
margin_right = 322.0
margin_bottom = 3.0
custom_colors/font_color = Color( 0.85098, 0.752941, 0.415686, 1 )
custom_fonts/font = SubResource( 3 )
text = "25$"

[node name="Velocitat" type="Label" parent="Control"]
margin_left = -192.0
margin_top = -7.0
margin_right = -57.0
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "100"

[node name="Button_velocitat" type="Button" parent="Control"]
margin_left = 160.0
margin_top = -32.0
margin_right = 180.0
margin_bottom = -12.0
theme = SubResource( 7 )
text = "+"

[node name="Acceleracio_text" type="Label" parent="Control"]
margin_left = -192.0
margin_top = 40.0
margin_right = 15.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0.85098, 0.752941, 0.415686, 1 )
custom_fonts/font = SubResource( 2 )
text = "Acceleration:"

[node name="Acceleracio" type="Label" parent="Control"]
margin_left = -192.0
margin_top = 72.0
margin_right = -57.0
margin_bottom = 105.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "100"

[node name="Preu_acceleracio" type="Label" parent="Control"]
margin_left = 187.0
margin_top = 50.0
margin_right = 322.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0.85098, 0.752941, 0.415686, 1 )
custom_fonts/font = SubResource( 3 )
text = "20$"

[node name="Button_acceleracio" type="Button" parent="Control"]
margin_left = 161.0
margin_top = 47.0
margin_right = 181.0
margin_bottom = 67.0
theme = SubResource( 7 )
text = "+"

[node name="Button_exit" type="Button" parent="Control"]
margin_left = -57.0
margin_top = 152.0
margin_right = 63.0
margin_bottom = 182.0
theme = SubResource( 11 )
text = "EXIT"

[node name="Comprar" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 3 )
volume_db = -2.0

[connection signal="button_down" from="Control/Button_velocitat" to="." method="_on_Button_velocitat_button_down"]
[connection signal="button_down" from="Control/Button_acceleracio" to="." method="_on_Button_acceleracio_button_down"]
[connection signal="button_down" from="Control/Button_exit" to="." method="_on_Button_exit_button_down"]
